--- a/style.css
+++ b/style.css
@@ -5,20 +5,60 @@
     font-family: Arial, Helvetica, sans-serif;
   }
   
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: #6563FF;
-  }
-  
-  .game-board {
-    padding: 25px;
-    border-radius: 10px;
-    background: #F8F8F8;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-  }
+/* body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #1b1a69;
+} */
+
+#game {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #1b1a69;
+}
+
+header {
+  text-align: center;
+  background: #1b1a69;
+  margin: 0;
+  padding-top: 1rem;
+  color: white;
+}
+
+h1 {
+  font-family: 'Amatic SC', cursive;
+
+}
+
+p {
+  display: inline-block;
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 25px;
+  padding: 10px;
+  cursor: pointer;
+  font-family: 'Amatic SC', cursive;
+
+}
+
+.game {
+  margin-top: 0;
+  display: inline;
+}
+
+
+.game-board {
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  border-radius: 25px;
+  background: #F8F8F8;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
 
   .cards,
 .card,
@@ -98,6 +138,8 @@
 .card.shake {
   animation: shake 0.35s ease-in-out;
 }
+
+
 
 
 
